<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">


    <TextView
        android:id="@+id/gallery"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:layout_marginBottom="40dp"
        android:height="@dimen/title_height"
        android:background="@color/blue"
        android:ems="10"
        android:text="@string/gallery"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"

        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery"
        app:srcCompat="@drawable/tihany_levendula" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_marginTop="70dp"
        android:text="0 / 0"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kepnev.png"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_prev"

        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/button_prev"
        app:layout_constraintBottom_toBottomOf="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_next"
        app:layout_constraintVertical_bias="0.0" />




    <!--    <ImageView-->
    <!--        android:id="@+id/tihany"-->
    <!--        android:layout_width="236dp"-->
    <!--        android:layout_height="231dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/gallery"-->

    <!--        app:srcCompat="@drawable/tihany" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/levendula"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="250dp"-->
    <!--        android:layout_alignParentStart="true"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_marginTop="@dimen/register_margin_top"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tihany"-->
    <!--        app:srcCompat="@drawable/tihany_levendula"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>